dev/image-registry.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: private-registry
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: private-registry
  template:
    metadata:
      labels:
        app: private-registry
    spec:
      containers:
        - name: registry
          image: registry:2
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: registry-storage
              mountPath: /var/lib/registry
      volumes:
        - name: registry-storage
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: private-registry
  namespace: default
spec:
  selector:
    app: private-registry
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
